// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GTM hook Provider should call onLoadError if script fail to load 1`] = `
"<script>window.dataLayer = window.dataLayer || [];</script><script src="https://www.googletagmanager.com/gtm.js?id=testId"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];
    w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
    var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
    j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl+'';

    j.addEventListener('error', function() {
        var _ge = new CustomEvent('gtm_loading_error', { bubbles: true });
        d.dispatchEvent(_ge);
    });

    f.parentNode.insertBefore(j,f);
  })(window,document,'script','dataLayer','testId');</script>"
`;

exports[`GTM hook Provider should load env when environment auth is missing 1`] = `
"<script>window.dataLayer = window.dataLayer || [];</script><script src="https://www.googletagmanager.com/gtm.js?id=testId"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];
    w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
    var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
    j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl+'';

    j.addEventListener('error', function() {
        var _ge = new CustomEvent('gtm_loading_error', { bubbles: true });
        d.dispatchEvent(_ge);
    });

    f.parentNode.insertBefore(j,f);
  })(window,document,'script','dataLayer','testId');</script>"
`;

exports[`GTM hook Provider should load when id and environment is provided 1`] = `
"<script>window.dataLayer = window.dataLayer || [];</script><script src="https://www.googletagmanager.com/gtm.js?id=testId&amp;gtm_auth=gtm&amp;gtm_preview=world&amp;gtm_cookies_win=x"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];
    w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
    var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
    j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl+'&gtm_auth=gtm&gtm_preview=world&gtm_cookies_win=x';

    j.addEventListener('error', function() {
        var _ge = new CustomEvent('gtm_loading_error', { bubbles: true });
        d.dispatchEvent(_ge);
    });

    f.parentNode.insertBefore(j,f);
  })(window,document,'script','dataLayer','testId');</script>"
`;

exports[`GTM hook Provider should load when id is provided 1`] = `
"<script>window.dataLayer = window.dataLayer || [];</script><script src="https://www.googletagmanager.com/gtm.js?id=testId"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];
    w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
    var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
    j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl+'';

    j.addEventListener('error', function() {
        var _ge = new CustomEvent('gtm_loading_error', { bubbles: true });
        d.dispatchEvent(_ge);
    });

    f.parentNode.insertBefore(j,f);
  })(window,document,'script','dataLayer','testId');</script>"
`;

exports[`GTM hook Provider should load with events when provided 1`] = `
[
  {
    "event": "gtm.js",
    "gtm.start": 1618272000000,
  },
  {
    "event": "sampleEvent",
    "extra": "test",
  },
]
`;

exports[`GTM hook Provider should not load when no id is provided 1`] = `""`;
